{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 282,
  "lineage": "2fb45cba-2e25-cc51-1dbf-24d2d798a2c7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "forward",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.170.108.17",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-05T07:54:40.887-07:00",
            "id": "projects/emoran-01-dev/regions/us-central1/addresses/forwarding-ip-emu",
            "name": "forwarding-ip-emu",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "emoran-01-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/addresses/forwarding-ip-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.66.94.89",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-05T07:54:40.888-07:00",
            "id": "projects/emoran-01-dev/regions/us-central1/addresses/cluster-ip1-emu",
            "name": "cluster-ip1-emu",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "emoran-01-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/addresses/cluster-ip1-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.123.73.58",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-05T07:54:51.819-07:00",
            "id": "projects/emoran-01-dev/regions/us-central1/addresses/activemgmt-ip-emu",
            "name": "activemgmt-ip-emu",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "emoran-01-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/addresses/activemgmt-ip-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.171.254.188",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-05T07:54:40.890-07:00",
            "id": "projects/emoran-01-dev/regions/us-central1/addresses/passivemgmt-ip-emu",
            "name": "passivemgmt-ip-emu",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "emoran-01-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/addresses/passivemgmt-ip-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static8",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.171.99.147",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-05T07:54:40.890-07:00",
            "id": "projects/emoran-01-dev/regions/us-central1/addresses/cluster-ip2-emu",
            "name": "cluster-ip2-emu",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "emoran-01-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/addresses/cluster-ip2-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-fgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-07-05T07:55:03.514-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/emoran-01-dev/global/firewalls/allow-public-1-emu",
            "log_config": [],
            "name": "allow-public-1-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-1-vpc-emu",
            "priority": 1000,
            "project": "emoran-01-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/firewalls/allow-public-1-emu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-fgt"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-07-05T07:54:52.001-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/emoran-01-dev/global/firewalls/allow-internal-emu",
            "log_config": [],
            "name": "allow-internal-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/private-vpc-emu",
            "priority": 1000,
            "project": "emoran-01-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/firewalls/allow-internal-emu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-sync",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2023-07-05T07:55:02.445-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/emoran-01-dev/global/firewalls/allow-syncmgmt-emu",
            "log_config": [],
            "name": "allow-syncmgmt-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/syncmgmt-vpc-emu",
            "priority": 1000,
            "project": "emoran-01-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/firewalls/allow-syncmgmt-emu",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-sync"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network3",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "creation_timestamp": "2023-07-05T07:55:56.568-07:00",
            "id": "projects/emoran-01-dev/regions/us-central1/forwardingRules/fgt-forwarding-rule",
            "ip_address": "34.170.108.17",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fgt-forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "443-443",
            "project": "emoran-01-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/forwardingRules/fgt-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-c/targetInstances/fgt-target-emu"
          },
          "dependencies": [
            "google_compute_address.forward",
            "google_compute_address.static",
            "google_compute_address.static2",
            "google_compute_address.static8",
            "google_compute_disk.logdisk",
            "google_compute_image.fgtvmgvnic",
            "google_compute_instance.default",
            "google_compute_network.vpc_network",
            "google_compute_network.vpc_network2",
            "google_compute_network.vpc_network3",
            "google_compute_network.vpc_network4",
            "google_compute_subnetwork.ha_subnet",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public2_subnet",
            "google_compute_subnetwork.public_subnet",
            "google_compute_target_instance.fgt-target",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-c/disks/log-disk-emu"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/images/fgtvmgvnic-image",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-c/disks/fotigate-01-emu"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/emoran-01-dev/zones/us-central1-c/instances/fotigate-01-emu",
            "instance_id": "7294400552581479050",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "user-data": "config sys glo\nset hostname active\nend\nconfig system interface\n    edit port1\n        set mode static\n        set ip 172.16.0.2/32\n        set allowaccess ping https ssh http fgfm\n        set description \"Public 1\"\n        set alias \"1-Public\"\n    next\n    \n    edit port2\n        set mode static\n        set ip 172.16.3.2/24\n        set allowaccess ping https ssh http fgfm\n        set alias \"2-Public\"\n        set description \"Public 2\"\n    nex [...]
            },
            "metadata_fingerprint": "f3SFvoT--qE=",
            "name": "fotigate-01-emu",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.66.94.89",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-1-vpc-emu",
                "network_ip": "172.16.0.2",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-1-emu",
                "subnetwork_project": "emoran-01-dev"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.99.147",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-2-vpc-emu",
                "network_ip": "172.16.3.2",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-2-emu",
                "subnetwork_project": "emoran-01-dev"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/private-vpc-emu",
                "network_ip": "172.16.1.2",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/private-subnet-emu",
                "subnetwork_project": "emoran-01-dev"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.73.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/syncmgmt-vpc-emu",
                "network_ip": "172.16.2.2",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/syncmgmt-subnet-emu",
                "subnetwork_project": "emoran-01-dev"
              }
            ],
            "project": "emoran-01-dev",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-c/instances/fotigate-01-emu",
            "service_account": [
              {
                "email": "705923033344-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-fgt",
              "allow-internal",
              "allow-mgmt",
              "allow-sync"
            ],
            "tags_fingerprint": "nK6CUFbBH6g=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_address.static2",
            "google_compute_address.static8",
            "google_compute_disk.logdisk",
            "google_compute_image.fgtvmgvnic",
            "google_compute_network.vpc_network",
            "google_compute_network.vpc_network2",
            "google_compute_network.vpc_network3",
            "google_compute_network.vpc_network4",
            "google_compute_subnetwork.ha_subnet",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public2_subnet",
            "google_compute_subnetwork.public_subnet",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-a/disks/log-disk2-emu"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/images/fgtvmgvnic-image",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-a/disks/fotigate-02-emu"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/emoran-01-dev/zones/us-central1-a/instances/fotigate-02-emu",
            "instance_id": "8582864752534370954",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "user-data": "config sys glo\nset hostname passive\nend\nconfig system interface\n    edit port1\n        set mode static\n        set ip 172.16.0.3/32\n        set allowaccess ping https ssh http fgfm\n        set description \"Public 1\"\n        set alias \"1-Public\"\n    next\n\n    edit port2\n        set mode static\n        set ip 172.16.3.3/24\n        set allowaccess ping https ssh http fgfm\n        set description \"Public 2\"\n        set alias \"2-PUBLIC\"\n    next\n [...]
            },
            "metadata_fingerprint": "din4tl5Fzs0=",
            "name": "fotigate-02-emu",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-1-vpc-emu",
                "network_ip": "172.16.0.3",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-1-emu",
                "subnetwork_project": "emoran-01-dev"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-2-vpc-emu",
                "network_ip": "172.16.3.3",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-2-emu",
                "subnetwork_project": "emoran-01-dev"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/private-vpc-emu",
                "network_ip": "172.16.1.3",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/private-subnet-emu",
                "subnetwork_project": "emoran-01-dev"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.254.188",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/syncmgmt-vpc-emu",
                "network_ip": "172.16.2.3",
                "nic_type": "GVNIC",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/syncmgmt-subnet-emu",
                "subnetwork_project": "emoran-01-dev"
              }
            ],
            "project": "emoran-01-dev",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/zones/us-central1-a/instances/fotigate-02-emu",
            "service_account": [
              {
                "email": "705923033344-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-fgt",
              "allow-internal",
              "allow-mgmt",
              "allow-sync"
            ],
            "tags_fingerprint": "nK6CUFbBH6g=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static3",
            "google_compute_disk.logdisk2",
            "google_compute_image.fgtvmgvnic",
            "google_compute_network.vpc_network",
            "google_compute_network.vpc_network2",
            "google_compute_network.vpc_network3",
            "google_compute_network.vpc_network4",
            "google_compute_subnetwork.ha_subnet",
            "google_compute_subnetwork.private_subnet",
            "google_compute_subnetwork.public2_subnet",
            "google_compute_subnetwork.public_subnet",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/emoran-01-dev/global/networks/public-1-vpc-emu",
            "mtu": 0,
            "name": "public-1-vpc-emu",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "emoran-01-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-1-vpc-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/emoran-01-dev/global/networks/private-vpc-emu",
            "mtu": 0,
            "name": "private-vpc-emu",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "emoran-01-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/private-vpc-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/emoran-01-dev/global/networks/syncmgmt-vpc-emu",
            "mtu": 0,
            "name": "syncmgmt-vpc-emu",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "emoran-01-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/syncmgmt-vpc-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/emoran-01-dev/global/networks/public-2-vpc-emu",
            "mtu": 0,
            "name": "public-2-vpc-emu",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "emoran-01-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-2-vpc-emu"
          },
          "dependencies": [
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/emoran-01-dev/global/routes/internal-route-emu",
            "name": "internal-route-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/private-vpc-emu",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "172.16.1.2",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "emoran-01-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/routes/internal-route-emu",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network2",
            "google_compute_subnetwork.private_subnet",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ha_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-05T07:55:02.487-07:00",
            "gateway_address": "172.16.2.1",
            "id": "projects/emoran-01-dev/regions/us-central1/subnetworks/syncmgmt-subnet-emu",
            "ip_cidr_range": "172.16.2.0/24",
            "name": "syncmgmt-subnet-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/syncmgmt-vpc-emu",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "emoran-01-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/syncmgmt-subnet-emu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network3",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-05T07:54:52.117-07:00",
            "gateway_address": "172.16.1.1",
            "id": "projects/emoran-01-dev/regions/us-central1/subnetworks/private-subnet-emu",
            "ip_cidr_range": "172.16.1.0/24",
            "name": "private-subnet-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/private-vpc-emu",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "emoran-01-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/private-subnet-emu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network2",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-05T07:55:02.498-07:00",
            "gateway_address": "172.16.3.1",
            "id": "projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-2-emu",
            "ip_cidr_range": "172.16.3.0/24",
            "name": "public-subnet-2-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-2-vpc-emu",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "emoran-01-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-2-emu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network4",
            "random_string.random_name_post"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-05T07:55:03.394-07:00",
            "gateway_address": "172.16.0.1",
            "id": "projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-1-emu",
            "ip_cidr_range": "172.16.0.0/24",
            "name": "public-subnet-1-emu",
            "network": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/global/networks/public-1-vpc-emu",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "emoran-01-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/emoran-01-dev/regions/us-central1/subnetworks/public-subnet-1-emu",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "random_string.random_name_post"
          ]
        }
      ]
    }
  ]
}